tests/NormalTests/paczka1/fuzzy1/81978253.err
Error in line 10: A361 A240 23,0
Error in line 13: 5m6Nc6zTrQY A822 8,9
Error in line 12: A361 A749 60,5
Error in line 21: A361 A240 31,9
Error in line 31: HhZh7 A240 70,5
